--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.5.0",
     "apollo-server-express": "^3.5.0",
+    "class-validator": "^0.13.2",
     "graphql": "^15.7.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
