--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
+    "bulma": "^0.9.3",
+    "classnames": "^2.3.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "graphql": "^16.0.1",
     "next": "12.0.4",
