--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "graphql": "^16.0.1",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.44.0"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
